--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
+    <!--Header start-->
+
+        <!--Header End-->
+
+  </div>
+
 
 
 <script src="js/aos.js"></script>
