--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
 
   <div class="page-wrapper">
     <!--Header start-->
+    <div class="header js-header">
+      <div class="container">
+      <div class="logo">
+        <a href="#">Becks' <span>Cleaning Service</span></a>
+      </div>
+        <button type="button" class="nav-toggler js-navtoggler">
+
+        </button>
+        <nav class="nav js-nav">
+          <ul>
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#pricing">pricing</a></li>
+            <li><a href="#team">team</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    
+    </div>
 
         <!--Header End-->
 
